refactor: Split startGame() method in RacingGameController